Fix admin menu z-index for dropdowns compared to header

--- a/client/src/sass/bootstrap.scss
+++ b/client/src/sass/bootstrap.scss
@@ -28,7 +28,13 @@ $icon-font-path: '~@neos21/bootstrap3-glyphicons/assets/fonts/';
 
 /* rules for dropdowns excepts when in button group, to avoid impacting the dropdown-toggle */
 .dropdown:not(.btn-group) {
-  z-index: z(dropdown) !important;
+  &:not(.parent-entry) {
+    z-index: z(dropdown) !important;
+  }
+
+  &.parent-entry {
+    z-index: z(header) - 1;
+  }
 }
 
 .dropdown-menu {
